--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="profile"></div>
         </div>
         <div class="minis">
-            <a class="notion" target="_blank" href=">https://www.instagram.com/easy_taekwondo">인스타그램    ></a>
+            <a class="notion" target="_blank" href="https://www.instagram.com/easy_taekwondo">인스타그램    ></a>
             <a class="brunch" target="_blank" href="https://m.blog.naver.com/PostList.naver?blogId=time4636">블로그        ></a>
             <a class="facebook" target="_blank" href="https://www.facebook.com/people/%EC%9D%B4%EC%A7%80%ED%83%9C%EA%B6%8C%EB%8F%84%ED%95%98%EA%B0%80%EC%A7%80%EA%B5%AC/100049384256594/">페이스북       ></a>
         </div>
